# ClassNotebook

./: .gitattributes  .gitignore  Download  README.md  index.html  inspirations.md  next_video.md  onetab  package-lock.json  package.json  scheduler.drawio  scheduler.drawio.html  scheduler.html  screen_shot  video.drawio  video.html  学习任务.md
C++的强大/社区实践/oop/oop-master/5382/bachinskiy/2/: CMakeLists.txt  main.cpp
C++的强大/社区实践/oop/oop-master/5382/bachinskiy/2/src/: CMakeLists.txt  RegularPentangle.h  Shape.cpp  Shape.h
C++的强大/社区实践/oop/oop-master/5382/bachinskiy/5/: CMakeLists.txt  main.cpp
C++的强大/社区实践/oop/oop-master/5382/bachinskiy/5/extra/: Solver.cpp  Solver.h
C++的强大/社区实践/oop/oop-master/5382/bachinskiy/5/figures/: Circle.cpp  Circle.h  Pentangle.cpp  Pentangle.h  RegularPentangle.cpp  Shape.h
C++的强大/社区实践/oop/oop-master/5382/bachinskiy/5/list/: list.h
C++的强大/社区实践/oop/oop-master/5382/bachinskiy/5/pointer/: CMakeLists.txt  shared_ptr.h
C++的强大/社区实践/oop/oop-master/5382/smolyakov/5/: CMakeLists.txt  figure.cpp  figure.h  lab_fun.cpp  lab_fun.h  main.cpp  shared_ptr.cpp  shared_ptr.h  test.cpp  vector.h
C++的强大/社区实践/oop/oop-master/5382/sofronov/2/: CMakeLists.txt  Shapes.cpp  Shapes.h  main.cpp  test.cpp
C++的强大/社区实践/oop/oop-master/5382/sofronov/5/: CMakeLists.txt  List.h  README  Shapes.cpp  Shapes.h  generation.cpp  shared_ptr.h  test.cpp
C++的强大/社区实践/oop/oop-master/5383/vasiliev/5/: CMakeLists.txt  CMakeLists.txt.in  main.cc  readme.txt  shapes.h  shared_ptr.h  vector.h
C++的强大/社区实践/oop/oop-master/6304/Korytov_Pavel/5/: CMakeLists.txt  readme.md  report.doc
C++的强大/社区实践/oop/oop-master/6304/Korytov_Pavel/5/include/: alg.hpp  circle.hpp  color.h  pentagon.hpp  point.h  regular_pentagon.hpp  shape.hpp  shared_ptr.hpp  vector.hpp
C++的强大/社区实践/oop/oop-master/6304/Korytov_Pavel/5/src/: color.cpp  main.cpp  point.cpp  tests.cpp
C++的强大/社区实践/oop/oop-master/6304/Timofeev_A/lab5/: CMakeLists.txt  README.md  algs.cpp  algs.hpp  basis.cpp  figures.cpp  figures.h  lab5.cpp  lab5_mod.cpp  lab5_nomod.cpp  list.hpp  shape.hpp  shared_ptr.hpp  tests.cpp  vector.hpp
C++的强大/社区实践/oop/oop-master/6304/rybin/LR5/: CMakeLists.txt  Circle.cpp  MyAlgorithm.cpp  MyAlgorithm.hpp  MyList.hpp  MySharedPtr.hpp  MyVector.hpp  README.md  Shape.hpp  Square.cpp  Triangle.cpp  main.cpp  ЛАБ5_ООП_Рыбин_6304.docx
C++的强大/社区实践/oop/oop-master/7304/SharapenkovII/lr5/: CMakeLists.txt  README.md  main.cpp
C++的强大/社区实践/oop/oop-master/7304/SharapenkovII/lr5/assets/: field.css  field.html  field.js
C++的强大/社区实践/oop/oop-master/7304/SharapenkovII/lr5/exception/: Exception.h
C++的强大/社区实践/oop/oop-master/7304/SharapenkovII/lr5/field/: Cell.cpp  Cell.h  Field.cpp  Field.h
C++的强大/社区实践/oop/oop-master/7304/SharapenkovII/lr5/gui/: GUI.cpp  GUI.h  UI.cpp  UI.h
C++的强大/社区实践/oop/oop-master/7304/SharapenkovII/lr5/impediment/: DynamicImpediment.cpp  DynamicImpediment.h  Impediment.cpp  Impediment.h  ImpedimentOrchestrator.cpp  ImpedimentOrchestrator.h  StaticImpediment.cpp  StaticImpediment.h
C++的强大/社区实践/oop/oop-master/7304/SharapenkovII/lr5/logger/: Logger.cpp  Logger.h
C++的强大/社区实践/oop/oop-master/7304/SharapenkovII/lr5/player/: Player.cpp  Player.h
C++的强大/社区实践/oop/oop-master/7304/SharapenkovII/lr5/runtime/: Game.cpp  Game.h
C++的强大/社区实践/oop/oop-master/7304/SharapenkovII/lr5/unit/: OwnUnits.cpp  OwnUnits.h  Unit.cpp  Unit.h
C++的强大/社区实践/oop/oop-master/7304/SharapenkovII/lr5/utility/: Coord.cpp  Coord.h
C++的强大/社区实践/oop/oop-master/8303/Dirksen_Anton/Lab1/: CMakeLists.txt  Object.cpp  Object.h  Point.cpp  Point.h  main.cpp
C++的强大/社区实践/oop/oop-master/8303/Dirksen_Anton/Lab1/Field/: Cell.h  Field.cpp  Field.h  FieldIterator.h
C++的强大/社区实践/oop/oop-master/8303/Dirksen_Anton/Lab1/Units/: Unit.cpp  Unit.h
C++的强大/社区实践/oop/oop-master/8303/Kryzhanovsky_Kirill/lab1/src/: Alliance.cpp  Alliance.h  CMakeLists.txt  Elf.cpp  Elf.h  GameField.cpp  GameField.h  Goblin.cpp  Goblin.h  Magicians.cpp  Magicians.h  Makefile  Orcs.cpp  (+12 more)
C++的强大/社区实践/oop/oop-master/8303/Udod_Maxim/lab7/: CMakeLists.txt  GameFacade.h  GameInfo.h  Point.h  main.cpp
C++的强大/社区实践/oop/oop-master/8304/Mukhin_Aleksandr/lab3/: Base.h  BaseComponent.cpp  Boardfield.cpp  Boardfield.h  CMakeLists.txt  Cell.cpp  Cell.h  Facade.cpp  Report_lab3.docm  main.cpp
C++的强大/社区实践/oop/oop-master/8382/Kolnogorov_Daniil/: CMakeLists.txt
C++的强大/社区实践/oop/oop-master/8382/Kolnogorov_Daniil/Lab3/: CMakeLists.txt
C++的强大/社区实践/oop/oop-master/8382/Kolnogorov_Daniil/Lab4/: run
C++的强大/社区实践/oop/oop-master/8382/Kolnogorov_Daniil/src/: main.cpp
C++的强大/社区实践/oop/oop-master/8382/Rocheva_Anna/lab4/: CMakeLists.txt  Facade.cpp  Facade.hpp  FieldCell.cpp  FieldCell.hpp  Manager.cpp  Manager.hpp  file.txt
C++的强大/社区实践/oop/oop-master/Lab3_Hohlov_correction/: CMakeLists.txt  GameFacade.h  GameInfo.h
C++的强大/社区实践/oop/oop-master/Lab3_Hohlov_correction/Armor/: LeatherArmor.h
C++的强大/社区实践/oop/oop-master/Lab3_Hohlov_correction/GameField/: FieldCell.cpp  FieldCell.h  GameField.cpp  GameField.h  GameFieldIterator.h
C++的强大/社区实践/oop/oop-master/Lab3_Hohlov_correction/Landscapes/: Desert.h  Landscape.h  LandscapeProxy.cpp  LandscapeProxy.h  Ocean.h
C++的强大/社区实践/oop/oop-master/Lab3_Hohlov_correction/Objects/: Base.cpp  Base.h  GameObject.cpp  GameObject.h
C++的强大/社区实践/oop/oop-master/Lab3_Hohlov_correction/Objects/Neutrals/: NeutralObject.h
C++的强大/社区实践/oop/oop-master/Sinelnikov/lab4/code/: Archer.h  Bar.h  Base.cpp  Base.h  BaseAction.cpp  BaseAction.h  CMakeLists.txt  Cavalry.cpp  Cavalry.h  Field.cpp  Field.h  Forest.cpp  Forest.h  Game.cpp  Game.h  Hospital.h  Interaction.cpp
code_src/exp/: Cargo.toml  n_body  record.txt
code_src/exp/benches/: matmul.rs
code_src/exp/c_src/: matrix_transposing.cpp
code_src/exp/ffi_example/src/: lib.rs
code_src/exp/kqueue_event_loop/src/runtime/: http_utils.rs  kqueue_ffi.rs  mod.rs  poll.rs
code_src/exp/my-redis/: Cargo.toml
code_src/exp/python_src/: ffi.py
code_src/exp/src/: closure_test.rs  collections.rs  dyn_type.rs  jit.rs  lib.rs  main.rs  matmul.rs  mutex.rs  n_body.rs  n_body_normal.rs  n_body_safe.rs  sync_send.rs  zero_copy.rs
(+10317 files in other folders)
