cmake_minimum_required(VERSION 3.15)
project(GAME)

set(CMAKE_CXX_STANDARD 17)

set(SOURCE_FILES
        GameLib/Objects/Attributes/Damage/Damage.cpp
        GameLib/Objects/Attributes/Damage/Damage.h
        GameLib/Objects/Attributes/Health/Health.cpp
        GameLib/Objects/Attributes/Health/Health.h
        GameLib/Objects/Attributes/Mana/Mana.cpp
        GameLib/Objects/Attributes/Mana/Mana.h
        GameLib/Objects/Units/Magicians/Magician.cpp
        GameLib/Objects/Units/Magicians/Magician.h
        GameLib/Objects/Units/Shooters/Shooter.cpp
        GameLib/Objects/Units/Shooters/Shooter.h
        GameLib/Objects/Units/Warriors/Warrior.cpp
        GameLib/Objects/Units/Warriors/Warrior.h
        GameLib/Objects/Units/Magicians/Wizard/Wizard.cpp
        GameLib/Objects/Units/Magicians/Wizard/Wizard.h
        GameLib/Objects/Units/Shooters/Archer/Archer.cpp
        GameLib/Objects/Units/Shooters/Archer/Archer.h
        GameLib/Objects/Units/Shooters/Crossbowman/Crossbowman.cpp
        GameLib/Objects/Units/Shooters/Crossbowman/Crossbowman.h
        GameLib/Objects/Units/IUnit.cpp GameLib/Objects/Units/IUnit.h
        GameLib/Objects/Object.cpp GameLib/Objects/Object.h
        GameLib/Objects/Attributes/Range/Range.cpp
        GameLib/Objects/Attributes/Range/Range.h
        GameLib/Objects/Units/Warriors/Spearman/Spearman.cpp
        GameLib/Objects/Units/Warriors/Spearman/Spearman.h
        GameLib/Objects/Units/Warriors/Knight/Knight.cpp
        GameLib/Objects/Units/Warriors/Knight/Knight.h
        GameLib/Objects/Units/Warriors/Knight/Knight.cpp
        GameLib/Objects/Units/Warriors/Knight/Knight.h
        GameLib/Objects/Units/Magicians/Mage/Mage.cpp
        GameLib/Objects/Units/Magicians/Mage/Mage.h
        GameLib/GameField/Field/Field.cpp
        GameLib/GameField/Field/Field.h
        GameLib/GameField/Tile/Tile.cpp
        GameLib/GameField/Tile/Tile.h
        GameLib/Factories/ObjectFactory/ObjectFactory.cpp
        GameLib/Factories/ObjectFactory/ObjectFactory.h
        GameLib/GameField/Field/Iterator/FieldIterator.cpp
        GameLib/GameField/Field/Iterator/FieldIterator.h
        GameLib/Landscape/ILandscape.cpp
        GameLib/Landscape/ILandscape.h
        GameLib/Landscape/Water/Water.cpp
        GameLib/Landscape/Water/Water.h
        GameLib/Landscape/Mountain/Mountain.cpp
        GameLib/Landscape/Mountain/Mountain.h
        GameLib/Landscape/Forest/Forest.cpp
        GameLib/Landscape/Forest/Forest.h
        GameLib/Factories/LandscapeFactory/LandscapeFactory.cpp
        GameLib/Factories/LandscapeFactory/LandscapeFactory.h
        GameLib/Objects/Base/Base.cpp GameLib/Objects/Base/Base.h
        GameLib/Objects/Base/Observer/IObserver.cpp
        GameLib/Objects/Base/Observer/IObserver.h
        GameLib/Objects/Base/Subject/Subject.cpp
        GameLib/Objects/Base/Subject/Subject.h
        GameLib/Objects/Units/UnitComposite/UnitComposite.cpp
        GameLib/Objects/Units/UnitComposite/UnitComposite.h
        GameLib/Objects/Neutral/INeutral.cpp
        GameLib/Objects/Neutral/INeutral.h
        GameLib/Strategies/INeutralStrategy.cpp
        GameLib/Strategies/INeutralStrategy.h
        GameLib/Objects/Neutral/AidKit/AidKit.cpp
        GameLib/Objects/Neutral/AidKit/AidKit.h
        GameLib/Objects/Neutral/Curse/Curse.cpp
        GameLib/Objects/Neutral/Curse/Curse.h
        GameLib/Objects/Neutral/Potion/Potion.cpp
        GameLib/Objects/Neutral/Potion/Potion.h
        GameLib/Objects/Neutral/Trap/Trap.cpp
        GameLib/Objects/Neutral/Trap/Trap.h
        GameLib/Strategies/AidKitStrategy/Refresh.cpp
        GameLib/Strategies/AidKitStrategy/Refresh.h
        GameLib/Strategies/CurseStrategy/Damn.cpp
        GameLib/Strategies/CurseStrategy/Damn.h
        GameLib/Strategies/PotionStrategy/ManaUp.cpp
        GameLib/Strategies/PotionStrategy/ManaUp.h
        GameLib/Strategies/TrapStrategy/HealthDown.cpp
        GameLib/Strategies/TrapStrategy/HealthDown.h
        GameLib/UserInteraction/GameClass/GameClass.cpp
        GameLib/UserInteraction/GameClass/GameClass.h
        GameLib/UserInteraction/ChainOfResponsibility/Chain.cpp
        GameLib/UserInteraction/ChainOfResponsibility/Chain.h
        GameLib/UserInteraction/ChainOfResponsibility/CreateUnitLink/CreateUnitLink.cpp
        GameLib/UserInteraction/ChainOfResponsibility/CreateUnitLink/CreateUnitLink.h
        GameLib/UserInteraction/ChainOfResponsibility/GetUnitLink/GetUnitLink.cpp
        GameLib/UserInteraction/ChainOfResponsibility/GetUnitLink/GetUnitLink.h
        GameLib/UserInteraction/ChainOfResponsibility/MoveUnitLink/MoveUnitLink.cpp
        GameLib/UserInteraction/ChainOfResponsibility/MoveUnitLink/MoveUnitLink.h
        GameLib/UserInteraction/ChainOfResponsibility/BaseInfoLink/BaseInfoLink.cpp
        GameLib/UserInteraction/ChainOfResponsibility/BaseInfoLink/BaseInfoLink.h
        GameLib/UserInteraction/ChainOfResponsibility/AttackUnitLink/AttackUnitLink.cpp
        GameLib/UserInteraction/ChainOfResponsibility/AttackUnitLink/AttackUnitLink.h
        GameLib/UserInteraction/ChainOfResponsibility/UnknownLink/UnknownLink.cpp
        GameLib/UserInteraction/ChainOfResponsibility/UnknownLink/UnknownLink.h
        GameLib/UserInteraction/Commands/ICommand.cpp
        GameLib/UserInteraction/Commands/ICommand.h
        GameLib/UserInteraction/Commands/DefaultCommands/UnknownCommand/UnknownCommand.cpp
        GameLib/UserInteraction/Commands/DefaultCommands/UnknownCommand/UnknownCommand.h
        GameLib/UserInteraction/Commands/BaseCommands/BaseInfoCommand/BaseInfoCommand.cpp
        GameLib/UserInteraction/Commands/BaseCommands/BaseInfoCommand/BaseInfoCommand.h
        GameLib/UserInteraction/Commands/UnitCommands/AttackUnitCommand/AttackUnitCommand.cpp
        GameLib/UserInteraction/Commands/UnitCommands/AttackUnitCommand/AttackUnitCommand.h
        GameLib/UserInteraction/Commands/UnitCommands/CreateUnitCommand/CreateUnitCommand.cpp
        GameLib/UserInteraction/Commands/UnitCommands/CreateUnitCommand/CreateUnitCommand.h
        GameLib/UserInteraction/Commands/UnitCommands/GetUnitCommand/GetUnitCommand.cpp
        GameLib/UserInteraction/Commands/UnitCommands/GetUnitCommand/GetUnitCommand.h
        GameLib/UserInteraction/Commands/UnitCommands/MoveUnitCommand/MoveUnitCommand.cpp
        GameLib/UserInteraction/Commands/UnitCommands/MoveUnitCommand/MoveUnitCommand.h
        GameLib/UserInteraction/Logging/Logging.cpp GameLib/UserInteraction/Logging/Logging.h
        GameLib/UserInteraction/Logging/LoggingProxy/LoggingProxy.cpp
        GameLib/UserInteraction/Logging/LoggingProxy/LoggingProxy.h
        GameLib/UserInteraction/File/File.cpp
        GameLib/UserInteraction/File/File.h
        GameLib/UserInteraction/Logging/Adapter/Adapter.cpp
        GameLib/UserInteraction/Logging/Adapter/Adapter.h
        GameLib/UserInteraction/ChainOfResponsibility/LoggingLink/LoggingLink.cpp
        GameLib/UserInteraction/ChainOfResponsibility/LoggingLink/LoggingLink.h
        GameLib/UserInteraction/Commands/DefaultCommands/LoggingCommand/LoggingCommand.cpp
        GameLib/UserInteraction/Commands/DefaultCommands/LoggingCommand/LoggingCommand.h
        GameLib/UserInteraction/Snapshot/Snapshot.cpp
        GameLib/UserInteraction/Snapshot/Snapshot.h
        GameLib/UserInteraction/File/File.cpp
        GameLib/UserInteraction/File/File.h
        GameLib/UserInteraction/ChainOfResponsibility/GameSaveLink/GameSaveLink.cpp
        GameLib/UserInteraction/ChainOfResponsibility/GameSaveLink/GameSaveLink.h
        GameLib/UserInteraction/Commands/DefaultCommands/GameSaveCommand/GameSaveCommand.cpp
        GameLib/UserInteraction/Commands/DefaultCommands/GameSaveCommand/GameSaveCommand.h
        GameLib/UserInteraction/Rules/Rule.cpp GameLib/UserInteraction/Rules/Rule.h
        GameLib/UserInteraction/Rules/States/IState.cpp
        GameLib/UserInteraction/Rules/States/IState.h
        GameLib/UserInteraction/Rules/RuleTwo/RuleTwo.cpp
        GameLib/UserInteraction/Rules/RuleTwo/RuleTwo.h
        GameLib/UserInteraction/Rules/RuleOne/RuleOne.cpp
        GameLib/UserInteraction/Rules/RuleOne/RuleOne.h
        GameLib/UserInteraction/Rules/States/StateBright/StateBright.cpp
        GameLib/UserInteraction/Rules/States/StateBright/StateBright.h
        GameLib/UserInteraction/Rules/States/StateDark/StateDark.cpp
        GameLib/UserInteraction/Rules/States/StateDark/StateDark.h
        GameLib/UserInteraction/Rules/States/StateUndead/StateUndead.cpp
        GameLib/UserInteraction/Rules/States/StateUndead/StateUndead.h
        GameLib/Exсeptions/Logical/LogicalError.cpp
        GameLib/Exсeptions/Logical/LogicalError.h
        GameLib/Exсeptions/OutOfRange/OutOfRangeError.cpp
        GameLib/Exсeptions/OutOfRange/OutOfRangeError.h
        GameLib/Exсeptions/Type/TypeError.cpp
        GameLib/Exсeptions/Type/TypeError.h
        GameLib/UserInteraction/Commands/DefaultCommands/SkipCommand/SkipCommand.cpp
        GameLib/UserInteraction/Commands/DefaultCommands/SkipCommand/SkipCommand.h
        GameLib/UserInteraction/ChainOfResponsibility/SkipLink/SkipLink.cpp
        GameLib/UserInteraction/ChainOfResponsibility/SkipLink/SkipLink.h
)


set(TEST_FILES
        GameCatchTests/catch.hpp
        GameCatchTests/FieldTest.cpp
        GameCatchTests/BaseTest.cpp
        )

add_executable(GAME
        #GameLib/main.cpp
        ${TEST_FILES}
        ${SOURCE_FILES}
)
